@@ -6,10 +6,10 @@ Changed:
 
 Fixed:
 
- o
+ o closing of sockets on Windows systems
 
 Thanks go to these friendly people for their efforts and contributions:
 
- 
+ Ingmar Runge 
 
 Have fun!
